[tool.poetry]
name = "lesbot"
version = "0.1.0"
description = ""
authors = ["Maximilian <git@eulenbu.de>"]
packages = [{ include = "lesbot" }]

[tool.poetry.scripts]
lesbot = "lesbot.app:run"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
python-magic = "^0.4.27"
pydantic = "^2.7.1"
requests = "^2.31.0"
loguru = "^0.7.2"
tinydb = "^4.8.0"
pynacl = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
